
[workspace]
resolver = "2"
members = ["day-*"]

[profile.release-lto]
inherits = "release"
lto = "fat"
opt-level = 3
strip = "symbols"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

[profile.bench]
inherits = "release"
debug = true

[workspace.dependencies]
dhat = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
